gh-pages deployer

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bitcore-lib": "^0.15.0",
     "bitcore-message": "^1.0.4",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -13,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages --dist build --message \"Automatic Deploy [ci skip]\""
   },
   "devDependencies": {
     "husky": "^0.15.0-rc.8",
