--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages --dist build --message \"Automatic Deploy [ci skip]\""
+    "deploy": "gh-pages --dist build --message \"Automatic Deploy [ci skip]\""
   },
   "devDependencies": {
     "husky": "^0.15.0-rc.8",
